Attempt integration tests